--- a/README.org
+++ b/README.org
@@ -2,4 +2,5 @@
 #+DESCRIPTION: Basic README
 
 * Lamina Operating System.
+This operating system is written in C++ as a learning experience and as a draft for any future re-writes.
 
