--- a/README.org
+++ b/README.org
@@ -4,3 +4,10 @@
 * Lamina Operating System.
 This operating system is written in C++ as a learning experience and as a draft for any future re-writes.
 
+* Building Lamina-Nel
+Step one: git clone https://github.com/UmbraAether/Lamina-Nel.git
+Step two: cd Lamina-Nel
+Step three: install-deps #Note: This currently works for pacman, apt may have issues with certain packages, no other package managers included so far.
+Step four: make install
+Step five: make run
+#To clean out the object files, bin files, and other files needed, use 'make clean'
